--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 		frameworks_and_apis = ['Django', 'OpenGL', 'OpenTK',],
 		tools = ['Git', 'Vim', 'Visual Studio',],
 	)
-	location = 'Melbourne, Australia'
-	availability = 'Available for hire'</code></pre>
+	location = 'London, United Kingdom'
+	occupation = 'Smarkets'</code></pre>
 
 			<a href="mailto:jakub@stasiak.at">mailto:jakub@stasiak.at</a>
 			<span class="separator"></span>
